--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
+LLM_PROVIDER=deepseek
 DEEPSEEK_API_KEY=your_deepseek_api_key
+
+# LLM_PROVIDER=openai
+# OPENAI_API_KEY=your_openai_api_key
+
+# LLM_PROVIDER=anthropic
+# ANTHROPIC_API_KEY=your_anthropic_api_key
+
+# LLM_PROVIDER=gemini
+# GEMINI_API_KEY=your_gemini_api_key
